# setlist-console

./: Dockerfile  README.md  fly.toml  pyproject.toml
setlist_console/: main.py
