[tool.poetry]
name = "setlist-console"
version = "0.1.0"
description = ""
authors = ["Chris <cwarren13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.37.1"
streamlit-timeline = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
